add project proile section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,18 @@
           <a class="prev">&#10094;</a>
           <a class="next">&#10095;</a>
         </div>
-        <div class="project-profile"></div>
+        <div class="project-profile">
+          <iframe
+            src="https://publuu.com/flip-book/360073/822301/page/1?embed&transparent"
+            width="100%"
+            height="100%"
+            scrolling="no"
+            frameborder="0"
+            allowfullscreen=""
+            allow="clipboard-write"
+            class="publuuflip"
+          ></iframe>
+        </div>
       </div>
     </section>
     <main>
@@ -290,7 +301,7 @@
 
       <!-- bottom nav -->
       <section id="navbar">
-        <a href="#" class="nav-link"
+        <a href="#" class="nav-link" id="home"
           ><i class=""
             ><svg
               xmlns="http://www.w3.org/2000/svg"
